[package]
name = "typixel-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol" }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
hex = "0.4"
serde_json = "1.0"
color_quant = "1.1"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true